--- a/templates/recipes/recipe_page.html
+++ b/templates/recipes/recipe_page.html
@@ -16,7 +16,7 @@
     <div class="recipe-detail-content">
         <div class="recipe-header">
             <h1>{{ recipe.title }}</h1>
-            <!-- Recipe Meta and Description -->
+            
             <div class="recipe-meta-description">  
                 <p>Cooking Time: {{ recipe.cooking_time }}</p>
                 <p>Prep Time: {{ recipe.prep_time }}</p>
@@ -25,24 +25,30 @@
                 <p>Views: {{ recipe.views }}</p>      
                
             </div>
+            <div>
+                <strong id="like_count">{{ recipe.likes }}</strong> likes
+        
+                {% if user.is_authenticated %}
+                <button id="like_btn" data-recipeid="{{ recipe.id }}" class="btn btn-primary btn-sm" type="button">
+                    <span data-feathers="thumbs-up"></span>
+                    Like recipe
+                </button>
+                {% endif %}
+            </div>
         </div>
        
-        <!--image-->
         <div class="recipe-main">
             <div class="recipe-image">
                 <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}">
             </div>
  
-            <!-- Recipe Steps and Ingredients to the left, Image to the right -->
             <div class="recipe-steps-ingredients">
                 <div class="recipe-steps">
                     <h2>Steps</h2>
-                    <!-- Add steps -->
                     <div>{{recipe.steps}}</div>
                 </div>
                 <div class="recipe-ingredients">
                     <h2>Ingredients</h2>
-                    <!-- Add ingredients -->
                     <div>{{recipe.ingredients}}</div>
                 </div>
             </div>
@@ -50,10 +56,14 @@
  
        
         <div class="recipe-actions">
-            <a herf="" class="review-button">View Reviews/Comments</a>
-            <a href="" class="comment-button">Leave a Review</a>
+            {% if user.is_authenticated %}
+            <a href="{% url 'recipes:recipe_reviews' recipe.id %}" class="review-button">View Reviews</a>
+            <a href="{% url 'recipes:upload_review' recipeID=recipe.id %}" class="comment-button">Leave a Review</a>
+            <a href="{% url 'recipes:add_to_favourites' recipe.id %}">Add to Favourites</a>
+            {% endif %}
         </div>
     </div>
 </div>
  
 {% endblock %}
+
