--- a/templates/recipes/register.html
+++ b/templates/recipes/register.html
@@ -21,19 +21,19 @@
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_first">First name:</label>
-                    <input class="input" name="first_name" type="text" required/>
+                    <input class="input" maxlength="30" name="first_name" type="text" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_last">Last name:</label>
-                    <input class="input" name="last_name" type="text" required/>
+                    <input class="input" maxlength="30" name="last_name" type="text" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_email">E-mail:</label>
-                    <input class="input" name="email" type="email" required/>
+                    <input class="input" maxlength="50" name="email" type="email" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_password">Password:</label>
-                    <input class="input" name="password" type="password" required/>
+                    <input class="input" minlength="8" maxlength="30" name="password" type="password" required/>
                 </p>
             </div>
             
