--- a/templates/recipes/upload.html
+++ b/templates/recipes/upload.html
@@ -22,11 +22,11 @@
                     {% endfor %}
                 </select>
                 
-                <label >Preparation Time:</label>
-                <input type="text" name="preparation" class="input" placeholder="preparation time" required>
+                <label >Preparation Time (mins):</label>
+                <input type="text" name="prep_time" class="input" placeholder="preparation time" required>
                
-                <label >Cooking Time:</label>
-                <input type="text" name="cooking" class="input" placeholder="cooking time" required>
+                <label >Cooking Time (mins):</label>
+                <input type="text" name="cooking_time" class="input" placeholder="cooking time" required>
                 
                 <label >Ingredients: [separate by new line]</label>
                 <textarea type="text" name="ingredients" class="input" placeholder="ingredients" required></textarea>
